# trend_sniper

./: README.md  pyproject.toml
src/trend_sniper/: __init__.py  asset.py  dataloader.py  indicators.py  strategies.py  visualization.py
